some corrections in readme.md